--- a/ProjOutLine.html
+++ b/ProjOutLine.html
@@ -7,7 +7,7 @@
   <title>IS448 Group Proj</title>
 </head>
 <body>
-	<h2></h2>
+	<h2>Welcome to our project</h2>
 	<p>
 		<img src = "" alt = "" />
 	</p>
